# sqlx-sqlserver

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: ci.sh  publish.sh  test-mssql.sh
src/: any.rs  arguments.rs  column.rs  connection.rs  database.rs  decimal_tools.rs  error.rs  lib.rs  migrate.rs  options.rs  query_result.rs  row.rs  ssrp.rs  statement.rs  tls.rs  transaction.rs  type_info.rs  types.rs  value.rs
src/protocol/: col_meta_data.rs  done.rs  login.rs  mod.rs  packet.rs  pre_login.rs  query.rs  read.rs  return_value.rs  row.rs  rpc.rs  token.rs  type_info.rs
tests/: README.md  mssql_smoke.rs
