[package]
name = "sqlx-sqlserver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Independent Microsoft SQL Server driver crate for SQLx."
repository = "https://github.com/launchbadge/sqlx"
rust-version = "1.86.0"

[features]
default = []
integration-tests = ["dep:tokio"]

[dependencies]
futures-core = { version = "0.3.32", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
log = "0.4"
percent-encoding = "2.3"
sqlx-core = { version = "=0.9.0", default-features = false, features = ["any"] }
thiserror = "2.0"
url = "2.5"

[dependencies.tokio]
version = "1.47"
features = ["macros", "net", "rt", "time"]
optional = true

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1.47", features = ["macros", "net", "rt", "time"] }
