[package]
name = "sqlx-sqlserver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Independent Microsoft SQL Server driver crate for SQLx."
repository = "https://github.com/lovasoa/sqlx-sqlserver"
rust-version = "1.94.0"

[features]
default = []
integration-tests = []

[dependencies]
futures-core = { version = "0.3.32", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
log = "0.4"
native-tls = "0.2"
percent-encoding = "2.3"
sqlx-core = { version = "=0.9.0", default-features = false, features = ["any"] }
thiserror = "2.0"
tokio-native-tls = "0.3"
url = "2.5"

tokio = { version = "1.47", features = ["io-util", "net", "time"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "net", "rt", "time"] }
