[package]
name = "sqlx-sqlserver"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Independent Microsoft SQL Server driver crate for SQLx."
repository = "https://github.com/lovasoa/sqlx-sqlserver"
readme = "README.md"
keywords = ["sqlx", "sqlserver", "mssql", "tds"]
categories = ["database"]
rust-version = "1.94.0"

[features]
default = []
integration-tests = []
migrate = ["sqlx-core/migrate"]
chrono = ["dep:chrono", "sqlx-core/chrono"]
time = ["dep:time", "sqlx-core/time"]
json = ["dep:serde", "dep:serde_json", "sqlx-core/json"]
uuid = ["dep:uuid", "sqlx-core/uuid"]
decimal = ["dep:rust_decimal", "sqlx-core/rust_decimal"]
bigdecimal = ["dep:bigdecimal", "dep:num-bigint", "sqlx-core/bigdecimal"]

[dependencies]
futures-core = { version = "0.3.32", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
log = "0.4"
native-tls = "0.2"
bigdecimal = { version = "0.4", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
num-bigint = { version = "0.4", optional = true }
percent-encoding = "2.3"
rust_decimal = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
sqlx-core = { version = "=0.9.0", default-features = false, features = ["any"] }
thiserror = "2.0"
time = { version = "0.3", optional = true }
tokio-native-tls = "0.3"
url = "2.5"
uuid = { version = "1", optional = true }

tokio = { version = "1.47", features = ["io-util", "net", "time"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
